tests/machine/x/ex/python_auto.exs
# Generated by Mochi Elixir compiler
defmodule Main do
  def main do
    IO.inspect(math.sqrt(16))
    IO.inspect(math.pi)
  end
end

Main.main()
